--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <div>
               <a class="wishlist" href="./pages/wishlist.html"><i class="fa-regular fa-heart me-4"></i></a>
-              <button type="button" class="btn btn-primary">Sign-up</button>
+              <a href="./pages/signUp.html"><button type="button" class="btn btn-primary">Sign-up</button></a>
             </div>
 
           </div>
