--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <a class="nav-link px-4 active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">SkinCare</a>
+                  <a class="nav-link px-4" href="./pages/skincare.html">SkinCare</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link px-4" href="#">Products</a>
