--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -45,7 +45,7 @@
                   <a class="nav-link px-4" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">SkinCare</a>
+                  <a class="nav-link px-4" href="./skincare.html">SkinCare</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link px-4" href="#">Products</a>
