--- a/index.html
+++ b/index.html
@@ -109,17 +109,14 @@
                 <li class="nav-item">
                   <a class="nav-link px-4" href="#">Products</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link px-4" href="#">Blog</a>
-                </li> -->
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     About
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="./pages/aboutUs.html">About Us</a></li>
-                    <li><a class="dropdown-item" href="#">Blogs</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="./pages/service.php">Service</a></li>
+                    <li><a class="dropdown-item" href="./pages/blogs.html">Blogs</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
