--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -50,9 +50,6 @@
                 <li class="nav-item">
                   <a class="nav-link px-4" href="#">Products</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link px-4" href="#">Blog</a>
-                </li> -->
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,8 +58,8 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item active " href="./pages/aboutUs.html" aria-current="page">About Us</a>
                     </li>
-                    <li><a class="dropdown-item" href="#">Blogs</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="./service.html">Service</a></li>
+                    <li><a class="dropdown-item" href="./blogs.html">Blogs</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
