--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -61,8 +61,8 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item active " href="./pages/aboutUs.html" aria-current="page">About Us</a>
                     </li>
-                    <li><a class="dropdown-item" href="#">Blogs</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="./service.html">Service</a></li>
+                    <li><a class="dropdown-item" href="./blogs.html">Blogs</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
