--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -58,7 +58,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item active " href="./pages/aboutUs.html" aria-current="page">About Us</a>
                     </li>
-                    <li><a class="dropdown-item" href="./service.html">Service</a></li>
+                    <li><a class="dropdown-item" href="./service.php">Service</a></li>
                     <li><a class="dropdown-item" href="./blogs.html">Blogs</a></li>
                   </ul>
                 </li>
