--- a/pages/skincare.html
+++ b/pages/skincare.html
@@ -18,8 +18,9 @@
     <script src="https://kit.fontawesome.com/0fcaa0e277.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/skincare.css">
+    <style>
 
+    </style>
 
 </head>
 
@@ -60,7 +61,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item " href="../pages/aboutUs.html">About Us</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="./service.html">Service</a></li>
+                                        <li><a class="dropdown-item" href="./service.php">Service</a></li>
                                         <li><a class="dropdown-item" href="./blogs.html">Blogs</a></li>
                                     </ul>
                                 </li>
