--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">Shop</a>
+                  <a class="nav-link px-4" href="./pages/contact.html">Contact</a>
                 </li>
+                
               </ul>
             </div>
 
