--- a/pages/skincare.html
+++ b/pages/skincare.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/0fcaa0e277.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/skincare.css">
     <style>
 
     </style>
@@ -66,7 +67,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link px-4" href="#">Shop</a>
+                                    <a class="nav-link px-4" href="./contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -102,13 +103,9 @@
     <!--SkinCare Routine-->
     <section id="skincare" class="py-5 my-5 text-center">
         <h2 class="text-uppercase pb-3 mb-3"><img src="../skincare_images/leaf.svg" height="45px" width="45px"
-                alt="skincare">
-            SkinCare Routine</h2>
+                alt="skincare">SkinCare Routine</h2>
         <div class="container ">
             <div class="row">
-                <!-- <h2 class="text-uppercase pb-3 mb-3"><img src="../skincare_images/leaf.svg" height="45px" width="45px"
-                        alt="skincare">
-                    SkinCare Routine</h2> -->
                 <h4 class="text-uppercase pb-5">The best order to apply skin care products.</h4>
                 <div class="col-xl-3 col-md-6 col-sm-12 ">
                     <img src="../skincare_images/1.png" alt="foam Cleanser" height="140px" width="140px">
