--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -63,7 +63,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">Shop</a>
+                  <a class="nav-link px-4" href="./contact.html">Contact</a>
                 </li>
               </ul>
             </div>
