working inside product.html

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -48,7 +48,7 @@
                   <a class="nav-link px-4" href="./skincare.html">SkinCare</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">Products</a>
+                  <a class="nav-link px-4" href="./products.html">Products</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -56,7 +56,7 @@
                     About
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item active " href="./pages/aboutUs.html" aria-current="page">About Us</a>
+                    <li><a class="dropdown-item active " href="./aboutUs.html" aria-current="page">About Us</a>
                     </li>
                     <li><a class="dropdown-item" href="./service.php">Service</a></li>
                     <li><a class="dropdown-item" href="./blogs.html">Blogs</a></li>
