--- a/pages/skincare.html
+++ b/pages/skincare.html
@@ -16,7 +16,6 @@
         href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/0fcaa0e277.js" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/skincare.css">
     <style>
@@ -52,7 +51,7 @@
                                         aria-current="page">SkinCare</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link px-4" href="#">Products</a>
+                                    <a class="nav-link px-4" href="./products.html">Products</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -88,7 +87,7 @@
             <div class="carousel-item active">
                 <img src="../skincare_images/carousel.jpg" class="d-block" alt="skinCare">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="text-dark fw-bold  text-uppercase">Skincare routine</h1>
+                    <h1 class="text-dark fw-bold  text-uppercase">Skincare</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb text-uppercase justify-content-center pb-5 mb-5">
                             <li class="breadcrumb-item"><a href="../index.html" style="color: #92715e;">Home</a></li>
