--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <a class="nav-link px-4" href="./pages/skincare.html">SkinCare</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">Products</a>
+                  <a class="nav-link px-4" href="./pages/products.html">Products</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
