--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,8 +62,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a class="wishlist" href="./pages/wishlist.html"><i
-                                    class="fa-regular fa-heart me-4"></i></a>
+                            <a class="wishlist" href="./pages/wishlist.html"><i class="fa-regular fa-heart me-4"></i></a>
                             <a href="signUp.html"><button type="button" class="btn btn-primary">Sign-up</button></a>
                         </div>
                     </div>
@@ -153,8 +152,7 @@
             width="45px" alt="skincare"> Our Location</h2>
         <div class="container ">
             <div class="text-center ">
-                <iframe width="75%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Pristina+(SkinCare)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
-            </div>
+               <iframe width="75%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Prishtina+(SkinCare)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>    
         </div>
     </section>
 
