--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item " href="../pages/aboutUs.html">About Us</a>
                                         </li>
-                                        <li><a class="dropdown-item active " href="./service.php">Service</a></li>
+                                        <li><a class="dropdown-item active " href="./service.php" aria-current="page">Service</a></li>
                                         <li><a class="dropdown-item" href="./blogs.html">Blogs</a></li>
                                     </ul>
                                 </li>
